--- a/stuff/pointillism/CMakeLists.txt
+++ b/stuff/pointillism/CMakeLists.txt
@@ -1,8 +1,10 @@
 project( pointillism )
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     set( CMAKE_CXX_STANDARD 17 )
-	set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17" )
+	set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++17" )
 	add_definitions(-std=c++17)
+    add_definitions(-std=gnu++17)
+    message(${CMAKE_CXX_FLAGS})
 endif()
 if (MSVC_VERSION GREATER_EQUAL "1900")
     include(CheckCXXCompilerFlag)
