added lightmetrica project

--- a/stuff/CMakeLists.txt
+++ b/stuff/CMakeLists.txt
@@ -1,2 +1,17 @@
-ADD_SUBDIRECTORY("pointillism")
-ADD_SUBDIRECTORY("jsonTests")
+MACRO(SUBDIRLIST result curdir)
+  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
+  SET(dirlist "")
+  FOREACH(child ${children})
+    IF(IS_DIRECTORY ${curdir}/${child})
+      LIST(APPEND dirlist ${child})
+    ENDIF()
+  ENDFOREACH()
+  SET(${result} ${dirlist})
+ENDMACRO()
+
+SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
+
+foreach(dir ${SUBDIRS})
+	message("PROJECT : " ${dir})
+	ADD_SUBDIRECTORY(${dir})
+endforeach()
